// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Dashboard displays as loading 1`] = `
.c5 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c9 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 span {
  word-break: break-all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 20rem;
  padding-right: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c4 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c7 {
  width: 1.4rem;
  height: 1.4rem;
  min-width: 1.4rem;
  min-height: 1.4rem;
  background: #009670;
  color: #fff;
  font-size: 0.9rem;
  line-height: 1.4rem;
  border-radius: 50%;
  text-align: center;
}

.c10 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 1rem 0;
  font-size: 1.2rem;
}

.c6 span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 span svg.fa-star {
  padding: 3px;
}

.c6 span + span {
  margin-left: 2rem;
}

.c8 {
  margin-right: 0.5rem;
  min-width: 12px;
  min-height: 12px;
  width: 12px;
  height: 12px;
  font-size: 0.8rem;
  line-height: 1.2rem;
}

@media (max-width:749px) {
  .c1 {
    min-width: 100%;
  }
}

@media (max-width:749px) {
  .c2 {
    padding-left: 1.2rem;
  }
}

@media (max-width:749px) {
  .c3 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:749px) {
  .c4 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="student-dashboard"
      >
        <div
          className="openstax-notifications-bar"
        />
        <div
          className="course-title-banner"
          data-appearance="testing"
          data-book-title="Testing"
          data-is-preview={false}
          data-term="Spring 2017"
          data-title="Local Test Course One"
        >
          <div
            className="book-title"
          >
            <h1
              className="book-title-text"
            >
              Local Test Course One
            </h1>
          </div>
          <div
            className="course-term"
          >
            Spring 2017
          </div>
        </div>
        <div
          className="container"
          data-tour-region-id="student-dashboard"
        >
          <div
            className="row"
          >
            <div
              className="col-lg-9 col-md-8 col-12"
            >
              <nav
                className="tutor-tabs"
                data-test-id="tabs"
              >
                <ul
                  className="nav nav-tabs"
                  role="tablist"
                >
                  <li
                    aria-selected={true}
                    className="active"
                    role="tab"
                  >
                    <a
                      data-test-id="this-week-tab"
                      href="#"
                      onClick={[Function]}
                    >
                      <h2>
                        This Week
                      </h2>
                    </a>
                  </li>
                  <li
                    aria-selected={false}
                    className=""
                    role="tab"
                  >
                    <a
                      data-test-id="all-past-work-tab"
                      href="#"
                      onClick={[Function]}
                    >
                      <h2>
                        All Past Work
                      </h2>
                    </a>
                  </li>
                </ul>
              </nav>
              <div
                className="tab-pane active"
                role="tabpanel"
              >
                <div
                  className="-this-week card"
                >
                  <div
                    className="c0"
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <span
                        className="date-range"
                      >
                        <time>
                          Oct 11, 2015
                        </time>
                        <span>
                          –
                        </span>
                        <time>
                          Oct 18, 2015
                        </time>
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    className="empty pending card"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-spinner fa-w-16 fa-spin c5 ox-icon ox-icon-spinner"
                      data-icon="spinner"
                      data-prefix="fas"
                      data-variant="activity"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Preparing assignments for your course.  This can take up to 10 minutes.
                  </div>
                </div>
                <div
                  className="c6"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-exclamation-circle fa-w-16 c5 ox-icon ox-icon-exclamation-circle"
                      color="#f4d019"
                      data-icon="exclamation-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Due soon
                  </span>
                  <span>
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-clock fa-w-16 c5 ox-icon ox-icon-clock"
                      color="#c2002f"
                      data-icon="clock"
                      data-prefix="far"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Late
                  </span>
                  <span>
                    <div
                      className="c7 extension-icon c8"
                    >
                      E
                    </div>
                     Extension
                  </span>
                  <span>
                    <svg
                      aria-hidden="true"
                      background="#5e5e5e"
                      className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                      color="white"
                      data-icon="star"
                      data-prefix="fas"
                      data-variant="circledStar"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Provisional score. Final scores will be available when published by your instructor.
                  </span>
                </div>
                <div
                  className="upcoming card"
                >
                  <div
                    className="c0"
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <span
                        className="title"
                      >
                        Coming Up
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      Scores
                    </div>
                  </div>
                  <a
                    aria-label="Work on event: robust strategize synergies"
                    className="c10 task event"
                    data-event-id={7}
                    href="/course/1/task/7"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-event"
                        type="event"
                      />
                      <span>
                        robust strategize synergies
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        10.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on external: virtual disintermediate e-commerce"
                    className="c10 task external"
                    data-event-id={6}
                    href="/course/1/task/6"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-external"
                        type="external"
                      />
                      <span>
                        virtual disintermediate e-commerce
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          Clicked
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        0.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on homework: 24/7 incubate paradigms"
                    className="c10 task homework"
                    data-event-id={8}
                    href="/course/1/task/8"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-homework"
                        type="homework"
                      />
                      <span>
                        24/7 incubate paradigms
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          Not started
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        9.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on reading: real-time empower content"
                    className="c10 task reading"
                    data-event-id={5}
                    href="/course/1/task/5"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-reading"
                        type="reading"
                      />
                      <span>
                        real-time empower content
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          In progress
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        8.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
            <div
              className="sidebar col-lg-3 col-md-4 col-12"
            >
              <div
                className="actions-box loadable is-loading"
              >
                Loading progress information...
              </div>
              <div
                className="actions-box browse-the-book card"
              >
                <a
                  aria-label="Browse course reference book"
                  className="browse-the-book"
                  data-appearance="testing"
                  href="/book/1"
                  onClick={[Function]}
                  target="_blank"
                >
                  <div>
                    Browse the Book
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher,teacher-not-previewed]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Student Dashboard matches snapshot 1`] = `
.c5 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c9 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 span {
  word-break: break-all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 20rem;
  padding-right: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c4 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c7 {
  width: 1.4rem;
  height: 1.4rem;
  min-width: 1.4rem;
  min-height: 1.4rem;
  background: #009670;
  color: #fff;
  font-size: 0.9rem;
  line-height: 1.4rem;
  border-radius: 50%;
  text-align: center;
}

.c10 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 1rem 0;
  font-size: 1.2rem;
}

.c6 span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 span svg.fa-star {
  padding: 3px;
}

.c6 span + span {
  margin-left: 2rem;
}

.c8 {
  margin-right: 0.5rem;
  min-width: 12px;
  min-height: 12px;
  width: 12px;
  height: 12px;
  font-size: 0.8rem;
  line-height: 1.2rem;
}

@media (max-width:749px) {
  .c1 {
    min-width: 100%;
  }
}

@media (max-width:749px) {
  .c2 {
    padding-left: 1.2rem;
  }
}

@media (max-width:749px) {
  .c3 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:749px) {
  .c4 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="student-dashboard"
      >
        <div
          className="openstax-notifications-bar"
        />
        <div
          className="course-title-banner"
          data-appearance="testing"
          data-book-title="Testing"
          data-is-preview={false}
          data-term="Spring 2017"
          data-title="Local Test Course One"
        >
          <div
            className="book-title"
          >
            <h1
              className="book-title-text"
            >
              Local Test Course One
            </h1>
          </div>
          <div
            className="course-term"
          >
            Spring 2017
          </div>
        </div>
        <div
          className="container"
          data-tour-region-id="student-dashboard"
        >
          <div
            className="row"
          >
            <div
              className="col-lg-9 col-md-8 col-12"
            >
              <nav
                className="tutor-tabs"
                data-test-id="tabs"
              >
                <ul
                  className="nav nav-tabs"
                  role="tablist"
                >
                  <li
                    aria-selected={true}
                    className="active"
                    role="tab"
                  >
                    <a
                      data-test-id="this-week-tab"
                      href="#"
                      onClick={[Function]}
                    >
                      <h2>
                        This Week
                      </h2>
                    </a>
                  </li>
                  <li
                    aria-selected={false}
                    className=""
                    role="tab"
                  >
                    <a
                      data-test-id="all-past-work-tab"
                      href="#"
                      onClick={[Function]}
                    >
                      <h2>
                        All Past Work
                      </h2>
                    </a>
                  </li>
                </ul>
              </nav>
              <div
                className="tab-pane active"
                role="tabpanel"
              >
                <div
                  className="-this-week card"
                >
                  <div
                    className="c0"
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <span
                        className="date-range"
                      >
                        <time>
                          Oct 11, 2015
                        </time>
                        <span>
                          –
                        </span>
                        <time>
                          Oct 18, 2015
                        </time>
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    className="empty pending card"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-spinner fa-w-16 fa-spin c5 ox-icon ox-icon-spinner"
                      data-icon="spinner"
                      data-prefix="fas"
                      data-variant="activity"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Preparing assignments for your course.  This can take up to 10 minutes.
                  </div>
                </div>
                <div
                  className="c6"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-exclamation-circle fa-w-16 c5 ox-icon ox-icon-exclamation-circle"
                      color="#f4d019"
                      data-icon="exclamation-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Due soon
                  </span>
                  <span>
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-clock fa-w-16 c5 ox-icon ox-icon-clock"
                      color="#c2002f"
                      data-icon="clock"
                      data-prefix="far"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Late
                  </span>
                  <span>
                    <div
                      className="c7 extension-icon c8"
                    >
                      E
                    </div>
                     Extension
                  </span>
                  <span>
                    <svg
                      aria-hidden="true"
                      background="#5e5e5e"
                      className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                      color="white"
                      data-icon="star"
                      data-prefix="fas"
                      data-variant="circledStar"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Provisional score. Final scores will be available when published by your instructor.
                  </span>
                </div>
                <div
                  className="upcoming card"
                >
                  <div
                    className="c0"
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <span
                        className="title"
                      >
                        Coming Up
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      Scores
                    </div>
                  </div>
                  <a
                    aria-label="Work on event: transparent exploit architectures"
                    className="c10 task event"
                    data-event-id={3}
                    href="/course/1/task/3"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-event"
                        type="event"
                      />
                      <span>
                        transparent exploit architectures
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        3.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on external: value-added reintermediate architectures"
                    className="c10 task external"
                    data-event-id={2}
                    href="/course/1/task/2"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-external"
                        type="external"
                      />
                      <span>
                        value-added reintermediate architectures
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          Not started
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        6.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on homework: interactive mesh convergence"
                    className="c10 task homework"
                    data-event-id={4}
                    href="/course/1/task/4"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-homework"
                        type="homework"
                      />
                      <span>
                        interactive mesh convergence
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          12/12 completed
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        2.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                  <a
                    aria-label="Work on reading: proactive engage web-readiness"
                    className="c10 task reading"
                    data-event-id={1}
                    href="/course/1/task/1"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="sc-fznyAO c1"
                    >
                      <i
                        className="c11 icon-reading"
                        type="reading"
                      />
                      <span>
                        proactive engage web-readiness
                      </span>
                    </div>
                    <div
                      className="sc-fznyAO c2"
                    >
                      <time>
                        Wed, Oct 21, 6:00am CST
                      </time>
                    </div>
                    <div
                      className="sc-fznyAO c3"
                    >
                      <div
                        className="c12"
                      >
                        <span
                          className="tour-anchor"
                          data-tour-anchor-id="assignment-progress-status"
                        >
                          In progress
                        </span>
                      </div>
                    </div>
                    <div
                      className="sc-fznyAO c4"
                    >
                      <div
                        className="c12"
                      >
                        5.0
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
            <div
              className="sidebar col-lg-3 col-md-4 col-12"
            >
              <div
                className="actions-box loadable is-loading"
              >
                Loading progress information...
              </div>
              <div
                className="actions-box browse-the-book card"
              >
                <a
                  aria-label="Browse course reference book"
                  className="browse-the-book"
                  data-appearance="testing"
                  href="/book/1"
                  onClick={[Function]}
                  target="_blank"
                >
                  <div>
                    Browse the Book
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher,teacher-not-previewed]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
